# tbook_desktop

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: en_ipa.tsv  sample.tbook
src-tauri/src/: ipa.rs  lib.rs  library.rs  models.rs  search.rs  tbook.rs
src/components/: ChapterList.svelte  NoteSheet.svelte  Paragraph.svelte  SearchPanel.svelte  TranslationSheet.svelte
src/lib/: align.ts  api.ts  app.svelte.ts  html.ts  lang.ts  progress.ts  render.ts  search.ts  settings.ts  types.ts
src/screens/: Library.svelte  Reader.svelte  Settings.svelte
