[package]
name = "desktop"
version = "0.1.0"
description = "TReader — desktop language-learning ebook reader"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

# Optimize the release binary for size (the desktop priority is a small binary).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
